{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 765,
  "lineage": "68aa0397-bf81-c612-9179-1073842ef534",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/lb-pip"
              }
            ],
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF",
            "location": "eastus",
            "name": "lb-TF",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF",
            "name": "BackEndAddressPool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF",
            "name": "http-rule",
            "probe_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/loadBalancers/lb-TF/probes/http-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.bepool",
            "azurerm_lb_probe.http",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_single_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-vm-single",
            "internal_domain_name_suffix": "glhhhj3wuyeelgdaolea3uavbg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-vm-single",
                "subnet_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-TF/subnets/subnet-TF"
              }
            ],
            "location": "eastus",
            "name": "nic-vm-single",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.vm_single_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm_single_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-vm-single|/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm-single",
            "network_interface_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/nic-vm-single",
            "network_security_group_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm-single"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.vm_single_nic",
            "azurerm_network_security_group.vm_single_nsg",
            "azurerm_public_ip.vm_single_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/vmss-nsg",
            "location": "eastus",
            "name": "vmss-nsg",
            "resource_group_name": "myTFResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "0.0.0.0/0",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Grafana-3000",
                "priority": 1005,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_single_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-vm-single",
            "location": "eastus",
            "name": "nsg-vm-single",
            "resource_group_name": "myTFResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-From-Specific-IP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "186.233.26.122",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Grafana",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP-Zabbix",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.229.225",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lb-pip",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_single_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/pip-vm-single",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.203.137.141",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-vm-single",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-TF/subnets/subnet-TF",
            "name": "subnet-TF",
            "resource_group_name": "myTFResourceGroup",
            "virtual_network_name": "vnet-TF"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-TF/subnets/subnet-TF",
            "network_security_group_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/vmss-nsg",
            "subnet_id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-TF/subnets/subnet-TF"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a773ce32-a6b6-4508-9860-72c80ed0150e",
            "id": "/subscriptions/35789804-a13e-4872-99d8-e9e308059479/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/vnet-TF",
            "location": "eastus",
            "name": "vnet-TF",
            "resource_group_name": "myTFResourceGroup"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}